[Extensions + Net] Add .mjs to MIME type mappings

Add .mjs to type mappings for the javascript MIME type. This is
necessary for .mjs to be recognized as a valid for use in modules
when served by the extension protocols, where the mime type is
determined by our net code (as opposed to a server).

Update the extension API test for modules to include a .mjs file test.

Bug: 857076
Change-Id: Ib14cabbc52057cfb57c933de5a9c3ed4b13b87d2
Reviewed-on: https://chromium-review.googlesource.com/1117203
Reviewed-by: Asanka Herath <asanka@chromium.org>
Commit-Queue: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571921}
Former-commit-id: 5074301504ea31a87c0bd9caddec42c2ff0841bd